--- a/link_script/style.css
+++ b/link_script/style.css
@@ -1,18 +1,14 @@
-/* color scheme
-https://www.w3schools.com/colors/colors_complementary.asp 
-*/
-
 body {
-    background: #F7EDD4;
+    background: #F7EBD4;
   }
 footer {
-    background: #090934;
+    height: 30px;
+    background: #091034;
+    border: 10px;
+    border-top-color: #FBA90A;
+    
 }
   /* every box is this size */
-  
-  .skyblue {
-    background: deepskyblue;
-  }
   
   .box{
     padding: 10px;
@@ -27,20 +23,33 @@ footer {
   
   /* Giving our navbar some padding and a background color */
   .navbar {
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 25px;
-    background:#FCBA12;
+    background:#FBA90A;
+    margin-bottom:0;
+    border-radius:0;
+  }
+  .navbar-brand {
+    color: #FBA90A;
+    background-color: #F7EBD4;
+    margin-bottom:0;
+    border:0
+  }
+  .navbar-toggle collapsed {
+    color:  #091034
   }
   
+  .navbar-right {
+    color:#091034;
+  }
+
   /* Making our navbar li's inline-block elements this makes it so we can have multiple on the same line. Floats could have been used too */
-  .navbar li {
+  /* .navbar li {
     display: d-block;
     padding: 10px;
     margin-right: 0px;
     margin-left: 0px;
     cursor: pointer;
-  }
+  } */
+
   h1 {
     font-size: 35px;
   }
@@ -66,7 +75,7 @@ footer {
     padding: 15px;
   }
   /* Adding media queries to show the drop-down, and hide the navbar when the screen is smaller than 480 pixels */
-  @media (max-width: 480px) {
+  /* @media (max-width: 480px) {
     .navbar li {
       padding: 10px;
     }
@@ -80,7 +89,7 @@ footer {
     #nav-select {
       visibility: visible;
     }
-  }
+  } */
   
   /* For desktop: */
   .col-1 {width: 8.33%;}
